# DynOSAM

./: .gitignore  .pre-commit-config.yaml  Doxyfile  INSTALL.md  LICENSE  README.md
dynosam/: CMakeLists.txt  package.xml
dynosam/example/: dyno_sam.cc
dynosam/include/dynosam/backend/: Accessor-impl.hpp  Accessor.hpp  BackendDefinitions.hpp  BackendInputPacket.hpp  BackendModule.hpp  BackendOutputPacket.hpp  BackendParams.hpp  BackendPipeline.hpp  BatchOptimizer.hpp  DynamicPointSymbol.hpp  DynoISAM2-impl.hpp  DynoISAM2.hpp  DynoISAM2Clique.hpp  DynoISAM2Params.hpp  DynoISAM2Result.hpp  DynoISAM2UpdateParams.hpp  FactorGraphTools.hpp  FixedLagOptimizer.hpp  Formulation-impl.hpp  Formulation.hpp  IncrementalOptimizer.hpp  Map.hpp  MonoBackend-Definitions.hpp  MonoBackendModule.hpp  MonoBackendTools.hpp  MonoBatchBackendModule.hpp  Optimizer.hpp  RGBDBackendModule-impl.hpp  RGBDBackendModule.hpp
dynosam/include/dynosam/common/: Algorithms.hpp  Camera.hpp  CameraParams.hpp  DynamicObjects.hpp  Exceptions.hpp  Flags.hpp  GroundTruthPacket.hpp  ImageContainer-inl.hpp  ImageContainer.hpp  ImageTypes.hpp  (+14 more)
dynosam/params/: CameraParams.yaml  DatasetParams.yaml  FrontendParams.yaml  PipelineParams.yaml  backend.flags  example.flags  frontend.flags  pipeline.flags
dynosam/src/backend/: BackendDefinitions.cc  BackendModule.cc  BackendParams.cc  BackendPipeline.cc  DynamicPointSymbol.cc  DynoISAM2-impl.cc  DynoISAM2.cc  DynoISAM2Clique.cc  DynoISAM2Params.cc  FactorGraphTools.cc  FixedLagOptimizer.cc  Map.cc  MonoBackendModule.cc  MonoBackendTools.cc  MonoBatchBackendModule.cc  RGBDBackendModule.cc
dynosam/src/common/: Algorithms.cc  Camera.cc  CameraParams.cc  DynamicObjects.cc  Exceptions.cc  GroundTruthPacket.cc  ImageContainer.cc  ImageTypes.cc  Map.cc  MapNodes.cc  ModuleFactory.cc  PointCloudProcess.cc  StereoCamera.cc  StructuredContainers.cc  Types.cc
dynosam/src/dataprovider/: ClusterSlamDataProvider.cc  DataInterfacePipeline.cc  DataProvider.cc  DataProviderFactory.cc  DataProviderModule.cc  DataProviderUtils.cc  DatasetLoader.cc  DatasetProvider.cc  OMDDataProvider.cc  ProjectAriaDataProvider.cc  VirtualKittidataProvider.cc
dynosam/src/factors/: LandmarkMotionPoseFactor.cc  LandmarkMotionTernaryFactor.cc  LandmarkPoseSmoothingFactor.cc  LandmarkQuadricFactor.cc  ObjectKinematicFactor.cc  Pose3FlowProjectionFactor.cc
dynosam/src/frontend/: Frontend-Definitions.cc  FrontendInputPacket.cc  FrontendModule.cc  FrontendParams.cc  FrontendPipeline.cc  MonoInstanceFrontendModule.cc  RGBDInstance-Definitions.cc  RGBDInstanceFrontendModule.cc
dynosam/src/logger/: Logger.cc
dynosam/src/pipeline/: PIpelineParams.cc  Pipeline-Definitions.cc  PipelineBase.cc  PipelineDefinitions.cc  PipelineManager.cc  PipelineParams.cc  PipelineSpinner.cc
dynosam/src/utils/: CsvParser.cc  CsvWriter.cc  GtsamUtils.cc  Histogram.cc  JsonUtils.cc  Logger.cc  Metrics.cc  OpenCVUtils.cc  Spinner.cc  Statistics.cc  TimingStats.cc
dynosam/src/visualizer/: ColourMap.cc  OpenCVFrontendDisplay.cc  Visualizer-Definitions.cc  VisualizerPipelines.cc
dynosam/test/: test_algorithms.cc  test_backend_structures.cc  test_camera.cc  test_camera_params.cc  test_code_concepts.cc  test_csv.cc  test_csvwriter.cc  test_dataset_provider.cc  test_dynamic_point_symbol.cc  test_factors.cc  test_histogram.cc  test_landmark_quadric_factor.cc  test_main.cc  test_map.cc  test_numerical.cc  test_params.cc  test_pipelines.cc  test_rgbd_backend.cc  test_structured_containers.cc  test_threadsafe_imu_buffer.cc  test_tools.cc  test_triangulation.cc  test_types.cc  test_viz.cc  thread_safe_queue_tests.cc  thread_safe_temporal_buffer_test.cc
dynosam/test/data/: sensor.yaml  tracking_params.yaml
dynosam/test/internal/: helpers.hpp  simulator.cc  simulator.hpp  test_camera.cc  tmp_file.cc  tmp_file.hpp
dynosam_odom/: CMakeLists.txt  package.xml
dynosam_odom/cmake/: dynosam_odomConfig.cmake.in
dynosam_odom/src/tmp/: CMakeLists.txt  tmp.cpp
dynosam_ros/: CMakeLists.txt  package.xml
dynosam_ros/dynosam_ros/: launch_utils.py
dynosam_ros/include/dynosam_ros/: BackendDisplayRos.hpp  DataProviderRos.hpp  Display-Definitions.hpp  DisplayRos.hpp  DisplaysImpl.hpp  FrontendDisplayRos.hpp  OnlineDataProviderRos.hpp  PipelineRos.hpp  RosUtils-inl.hpp  RosUtils.hpp  Utils.hpp  tmp_ros.h
dynosam_ros/launch/: dyno_sam_experiments_launch.py  dyno_sam_launch.py  dyno_sam_online_launch.py  dyno_sam_online_launch.xml
dynosam_ros/nodes/: backend_experiments_node.cc  dataset_node.cc  dynosam_node.cc
dynosam_ros/rviz/: rivz.rviz  rviz_dsd.rviz
dynosam_ros/scripts/: run_dynosam_gtest.py
dynosam_ros/src/: BackendDisplayRos.cc  DataProviderRos.cc  DisplayRos.cc  FrontendDisplayRos.cc  OnlineDataProviderRos.cc  PipelineRos.cc  RosUtils.cc  Utils.cc  app.cpp  backend_experiments_node.cc  dynosam_node.cc  tmp_ros.cpp
dynosam_ros/src/displays/: DisplaysCommon.cc
dynosam_ros/src/inbuilt_displays/: BackendInbuiltDisplayRos.cc  FrontendInbuiltDisplayRos.cc  InbuiltDisplayCommon.cc
dynosam_ros/test/: test_adaptors.cc  test_main.cc  test_online_dataprovider_ros.cc  test_ros_utils.cc
dynosam_utils/: CMakeLists.txt  README.md  TRO_2024_experiments.md  package.xml
dynosam_utils/dynosam_utils/: dynosam_types.py
dynosam_utils/dynosam_utils/evaluation/: __init__.py  evaluation_lib.py  filesystem_utils.py  formatting_utils.py  runner.py  tools.py
dynosam_utils/launch/: record_dataset_videos.launch.py
dynosam_utils/misc/: InstanceVizReader.cc  depth_to_pointcloud_node.py  instance_viz_test.py  test.py  test_load_projected_mask.py
dynosam_utils/scripts/: eval_launch.py  record_image_topic.py
dynosam_utils/src/: KittiSemaniticToMotion.cc  dynosam_types.py  eval_launch.py  instance_viz_test.py  make_stats_over_all_runs.py  mvo_analysis.py  plot_3d_map.py  plot_per_frame_motion_error.py  run_all_frontends.py  run_backends.py  run_eval.py  run_experiments_tro.py  sliding_window_vs_batch_error_plot.py
dynosam_utils/src/evaluation/: __init__.py  evaluation_lib.py  filesystem_utils.py  formatting_utils.py  result_types.py  tools.py
(+180 files in other folders)
