<?xml version="1.0"?>
<package format="2">
  <name>dynosam_odom</name>
  <version>0.0.1</version>
  <description>DynOSAM Frontend/Odometry</description>

  <maintainer email="yiduo.wang@sydney.edu.au">Yiduo Wang</maintainer>
  <maintainer email="jesse.morris1@sydney.edu.au">Jessie Morris</maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>dbow2_catkin</depend>
  <depend>gtsam</depend>
  <!-- <depend>libgflags-dev</depend> -->
  <!-- <depend>libgoogle-glog-dev</depend> -->
  <!-- KimeraVIO needs opencv >= 3.3.1, yet ROS uses 3.2.0.
       Hacky way of avoiding error in KimeraVIO by linking to 3.4.2-->
  <depend>opencv3_catkin</depend>
  <depend>opengv_catkin</depend>
  <export>
    <!-- Specify that this is not really a catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>
