<?xml version="1.0"?>
<package format="2">
  <name>dynosam_ros</name>
  <version>0.0.1</version>
  <description>DynOSAM ROS Interface</description>

  <maintainer email="yiduo.wang@sydney.edu.au">Yiduo Wang</maintainer>
  <maintainer email="jesse.morris@sydney.edu.au">Jessie Morris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

 <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dynosam</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_slam_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
